--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cypress-cucumber-preprocessor": "^4.3.0"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true,
-    "stepDefinitions": "cypress/e2e"
+    "nonGlobalStepDefinitions": false,
+    "stepDefinitions": "cypress/e2e/step_definitions/"
   }
 }
