--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample implementation of Cypress using Cucumber",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run --spec \"**/Creditcard.feature\"",
+    "test": "cypress run --spec \"**/Login.feature\"",
     "test:all": "cypress run --spec \"**/*.feature\""
   },
   "repository": {
